Fixing text wrapping

--- a/src/main/resources/stylesheets/designer.css
+++ b/src/main/resources/stylesheets/designer.css
@@ -14,12 +14,6 @@
 	src: url('../fonts/opensans-regular-webfont.ttf') format('truetype');
 }
 
-
-* {
-	font-family: "opensans-light-webfont";
-	/*alignment-baseline: hanging;*/
-}
-
 /* Definitions of Kite9 Elements */
 
 context, 
@@ -259,7 +253,7 @@ toDecoration {
 	fill-transparency: 60%;
 	stroke: green;
 	stroke-width: 0;
-	font-size: 10px;
+	font-size: 11px;
 	font-family: "opensans-light-webfont";
 }
 
@@ -322,14 +316,14 @@ key > text-lines {
 	fill: white;
 }
 
-.glyph  .label  text {
+.glyph  .label  .text-label {
 	font-size: 15px;
-	fill: black;
+	fill: red;
 	font-family: "opensans-regular-webfont";
 	stroke: none;
 }
 
-.glyph  .stereotype  text {
+.glyph  .stereotype  .text-label {
 	font-family: "opensans-bold-webfont";
 	font-size: 12px;
 	fill: black;
@@ -337,12 +331,12 @@ key > text-lines {
 	/*kite9-padding: 2px 2px 2px 2px; */
 }
 
-.glyph .text-lines text {
+.glyph .text-lines .text-label {
 	stroke: none;
 	fill: black;
 	font-family: "opensans-regular-webfont";
 	text-align: start;	
-	font-size: 10px;
+	font-size: 9px;
 }
 
 .red {
@@ -392,6 +386,6 @@ key > text-lines {
 .text-line,
 .boldText,
 .bodyText {
-	font-size: 11px;
+	font-size: 13px;
 }
 
